Fixed spacing for footer links, removed scroll bar in footer, made text bold for sign in button

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 a:link {
-    color: black; 
+    color:black;
     text-decoration: none;  
 }
 a:hover {
@@ -28,8 +28,9 @@ a:visited {
 
 }
 
+
 header {
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 #top-right-nav {
@@ -38,6 +39,7 @@ header {
 
 .top-nav-links {
     padding-left: 1px;
+    text-align: center;
 }
 
 .top-nav-buttons {
@@ -58,6 +60,8 @@ header {
     border: none;
     height: 40px;
     border-radius: 2px;
+    font-weight: bolder;
+    font-size: 15.5px;
 }
 
 
@@ -83,7 +87,6 @@ header {
     border-style: solid;
     margin: auto;
     
-    
 }
 #center{
   margin-left: 41%;
@@ -98,15 +101,26 @@ header {
     height: 40px;
     font-size: 88%;
 }
-
+#carbon {
+    margin-left: 23%;
+}
 #bottom-right-nav {
-    margin-left: 1400px;
+    margin-left: 1450px;
+   
+}
+
+.bottom-links {
+    padding-left: 1px;
+    
 }
 
 footer {
-    background-color: rgb(231, 231, 231);
+    background-color: #f2f2f2;
     position:absolute;
     bottom:0;
     width:100%;
-    height:40px;
+    height:48px;
+    overflow:hidden;
+    border-top: 1px solid #e4e4e4;
+    color:#5f6368;
 }
